# flask-scotch

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml  requirements_dev.txt  setup.cfg
flask_scotch/: ForeignModel.py  ForeignRelationship.py  LocalModel.py  LocalRelationship.py  RemoteModel.py  RemoteRelationship.py  __init__.py  utils.py
tests/: conftest.py  test_foreign_model.py  test_local_model.py  test_remote_object.py
