[metadata]
name = flask-scotch
version = attr: flask_scotch.__version__
description = Tape a REST API with a local database
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/AzariasB/flask-scotch
author = AzariasB
maintainer = AzariasB
license = MIT
license_file = LICENSE
platforms = any
classifiers =
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: Implementation :: CPython
    Topic :: Software Development :: Libraries :: Python Modules
    Topic :: Software Development :: Database
    Topic :: Software Development :: REST API

[options]
packages =
    flask-scotch
install_requires =
    Flask>=2.0.1
    SQLAlchemy>=1.4.18
    pydantic>=1.8.2
python_requires = >=3.9

[flake8]
extend-ignore = F401

[bumpversion]
current_version = 0.0.1
